Deployment fixes
Hopping to fix odd layout issue with mobile screens and fix background image not loading issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,6 @@
 }
 
 .parallax {
-  background-image: url(../public/food\ dishes.jpg);
+  background-image: url(/food\ dishes.jpg);
   background-size: cover;
 }
